--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ passlib[bcrypt]==1.7.4
 pydantic[email]==2.9.2
 pytest==8.3.3
 pytest-asyncio==0.24.0
+pytest-cov==5.0.0
 httpx==0.27.2
 coverage==7.5.3
 memory-profiler==0.61.0
+psutil==5.9.8
+requests==2.31.0
 sphinx==7.3.7
 sphinx-rtd-theme==2.0.0
 
